GearsetPOC/force-app/main/default/objects/User/fields/approved_by__c.field-meta.xml
<CustomField>
    <fullName>approved_by__c</fullName>
    <label>Approved By</label>
    <relationshipName>Users</relationshipName>
    <restrictedAdminField>true</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>