GearsetPOC/force-app/main/default/objects/User/fields/Azure_reactivation_Date__c.field-meta.xml
<CustomField>
    <fullName>Azure_reactivation_Date__c</fullName>
    <description>Date of most recent user reactivation performed by &#39;azuresso@eurostar.com&#39; user</description>
    <label>Azure reactivation Date</label>
    <type>DateTime</type>
</CustomField>