GearsetPOC/force-app/main/default/objects/User/fields/DBS_Checked__c.field-meta.xml
<CustomField>
    <fullName>DBS_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Related to the Homework Club (Criminal Records checks)</inlineHelpText>
    <label>DBS Checked</label>
    <type>Checkbox</type>
</CustomField>