GearsetPOC/force-app/main/default/objects/User/fields/Employee_Type__c.field-meta.xml
<CustomField>
    <fullName>Employee_Type__c</fullName>
    <description>This field is to hold the Employee Type from HR records in order to display  in the intranet.</description>
    <label>Employee Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>