GearsetPOC/force-app/main/default/objects/User/fields/Inactive_Login_warning_sent__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Login_warning_sent__c</fullName>
    <label>Inactive Login warning sent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st warning sent</fullName>
            </value>
            <value>
                <fullName>2nd warning sent</fullName>
            </value>
            <value>
                <fullName>3rd warning and user to be deactivated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>