GearsetPOC/force-app/main/default/objects/User/fields/isTracked__c.field-meta.xml
<CustomField>
    <fullName>isTracked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isTracked</label>
    <type>Checkbox</type>
</CustomField>