GearsetPOC/force-app/main/default/objects/User/fields/Last_Inactive_Login_Notification__c.field-meta.xml
<CustomField>
    <fullName>Last_Inactive_Login_Notification__c</fullName>
    <label>Last Inactive Login Notification</label>
    <type>DateTime</type>
</CustomField>