GearsetPOC/force-app/main/default/objects/User/fields/Latest_CSAT_Star_Rating__c.field-meta.xml
<CustomField>
    <fullName>Latest_CSAT_Star_Rating__c</fullName>
    <formula>IMAGE(
IF(ISBLANK(TEXT(Latest_CSAT_Value__c)), &quot;/servlet/servlet.FileDownload?file=015Rz0000028gaP&quot;,
IF(TEXT(Latest_CSAT_Value__c) = &quot;1&quot;, &quot;/servlet/servlet.FileDownload?file=015Rz0000028gaQ&quot;,
IF(TEXT(Latest_CSAT_Value__c) = &quot;2&quot;, &quot;/servlet/servlet.FileDownload?file=015Rz0000028gaR&quot;,
IF(TEXT(Latest_CSAT_Value__c) = &quot;3&quot;, &quot;/servlet/servlet.FileDownload?file=015Rz0000028gaS&quot;,
IF(TEXT(Latest_CSAT_Value__c) = &quot;4&quot;, &quot;/servlet/servlet.FileDownload?file=015Rz0000028gaT&quot;, &quot;/servlet/servlet.FileDownload?file=015Rz0000028gaU&quot;
))))),
&quot;Rating&quot;, 20, 100)</formula>
    <label>Latest CSAT Star Rating</label>
    <type>Text</type>
</CustomField>