GearsetPOC/force-app/main/default/objects/User/fields/Latest_CSAT_Value__c.field-meta.xml
<CustomField>
    <fullName>Latest_CSAT_Value__c</fullName>
    <label>Latest CSAT Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>