GearsetPOC/force-app/main/default/objects/User/fields/ManagerUsername__c.field-meta.xml
<CustomField>
    <fullName>ManagerUsername__c</fullName>
    <label>ManagerUsername</label>
    <length>100</length>
    <type>Text</type>
</CustomField>