GearsetPOC/force-app/main/default/objects/User/fields/Number_of_CSAT_s_sent__c.field-meta.xml
<CustomField>
    <fullName>Number_of_CSAT_s_sent__c</fullName>
    <label>Number of CSAT’s sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>