GearsetPOC/force-app/main/default/objects/User/fields/Person_Type__c.field-meta.xml
<CustomField>
    <fullName>Person_Type__c</fullName>
    <description>This is created as a workaround to display the proper label on the intranet for the information stored in the CompanyName field.</description>
    <formula>CompanyName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This will display the person type held in Oracle.</inlineHelpText>
    <label>Person Type</label>
    <type>Text</type>
</CustomField>