GearsetPOC/force-app/main/default/objects/User/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <formula>IF(ISBLANK(ManagerId), FirstName+&quot; &quot;+LastName, Manager.FirstName+&quot; &quot;+Manager.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team</label>
    <type>Text</type>
</CustomField>