GearsetPOC/force-app/main/default/objects/User/fields/Train_Service__c.field-meta.xml
<CustomField>
    <fullName>Train_Service__c</fullName>
    <label>Train Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>Purple</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>