GearsetPOC/force-app/main/default/objects/User/validationRules/Mandatory_manager_for_advisors.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_manager_for_advisors</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS(UserRole.Name, &quot;Advisor&quot;) &amp;&amp; ISBLANK(ManagerId) &amp;&amp;  IsActive == TRUE</errorConditionFormula>
    <errorDisplayField>ManagerId</errorDisplayField>
    <errorMessage>Every advisor needs to have a manager.</errorMessage>
</ValidationRule>