GearsetPOC/force-app/main/default/objects/User/listViews/Indirect_Sales.listView-meta.xml
<ListView>
    <fullName>Indirect_Sales</fullName>
    <booleanFilter>(1 OR 3 ) AND 2</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>Sales</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Account Manager</value>
    </filters>
    <label>Indirect Sales</label>
    <language>en_US</language>
    <sharedTo>
        <role>Sales_Admin</role>
    </sharedTo>
</ListView>