GearsetPOC/force-app/main/default/objects/User/listViews/Non_EBSC_Staff_with_ECC_Staff_profile.listView-meta.xml
<ListView>
    <fullName>Non_EBSC_Staff_with_ECC_Staff_profile</fullName>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.DEPARTMENT</columns>
    <columns>MANAGER</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>ECC</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USERS.DEPARTMENT</field>
        <operation>notEqual</operation>
        <value>COM-Ashford Contact Centre,Bucharest,Derby,COM-UK Sales</value>
    </filters>
    <label>Non EBSC Staff with ECC Staff profile</label>
    <language>en_US</language>
</ListView>